--- a/index.html
+++ b/index.html
@@ -1,26 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSBS</title>
+    <title>Document</title>
     <link rel="stylesheet" href="index.css">
 </head>
+<body class="body">
+    <header class="header-container">
+        <div class="logo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNSfAJfiHykdXc_lR_RlmK6p-0LIRViia6Rg&s" alt="" class="logo-image">
+        </div>
+        <nav class="head-container">
+            <ul class="head-items">
+                <li ><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="mm">
+        <section id="home">
+            <p class="home">HOME :</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlZGfIYDHG8obPJUZ9Zhk0sQuHKT3JqKqwhA&s" alt="" class="logo-image2"><br><br>
+            <p> APXGP team overview
+APXGP is owned by former driver Rubén Cervantes, whose investors will sell the team if it does not win at least one Grand Prix in the season.​
 
-<body>
-    <h1>
-        bye
-    </h1>
-    <h2 id="vijay">
-        sandy
-    </h2>
-   <h1 class="heading">Hi Welcome</h1>
-   <p class="para">TATA Good Bye</p>
-   <p id="sandy">boi boi</p>
-   <marquee behaviour="scroll" direction="left" class="student">PRASANNA</marquee>
-   <marquee behaviour="scroll" direction="up" class="home">Welcome</marquee>
+The team hires veteran driver Sonny Hayes to partner young rookie Joshua Pearce, hoping Hayes’s experience can turn the car and the team into race winners.​
 
+Key staff include technical director Kate McKenna and a hardworking but error-prone crew, reflecting a low-budget team trying to compete with giants like Mercedes and Ferrari.
+APXGP team overview
+APXGP is owned by former driver Rubén Cervantes, whose investors will sell the team if it does not win at least one Grand Prix in the season.​
+
+The team hires veteran driver Sonny Hayes to partner young rookie Joshua Pearce, hoping Hayes’s experience can turn the car and the team into race winners.​
+
+Key staff include technical director Kate McKenna and a hardworking but error-prone crew, reflecting a low-budget team trying to compete with giants like Mercedes and Ferrari.​
+
+Role in the movie
+APXGP starts as one of the slowest teams on the grid, with reliability problems, slow pit stops, and an uncompetitive car.​
+
+Through Sonny’s feedback and Kate’s upgrades, the team improves the car’s aerodynamics and race strategies, gradually moving from the back to fighting for podiums and wins.​
+
+The climax of the film centers on APXGP needing a win in the final race to save the team, where Sonny and Joshua’s teamwork ultimately secures victory and the future of APXGP.
+APXGP team overview
+APXGP is owned by former driver Rubén Cervantes, whose investors will sell the team if it does not win at least one Grand Prix in the season.​
+
+The team hires veteran driver Sonny Hayes to partner young rookie Joshua Pearce, hoping Hayes’s experience can turn the car and the team into race winners.​</p>
+<p>
+    Key staff include technical director Kate McKenna and a hardworking but error-prone crew, reflecting a low-budget team trying to compete with giants like Mercedes and Ferrari.​
+
+Role in the movie
+APXGP starts as one of the slowest teams on the grid, with reliability problems, slow pit stops, and an uncompetitive car.​
+
+Through Sonny’s feedback and Kate’s upgrades, the team improves the car’s aerodynamics and race strategies, gradually moving from the back to fighting for podiums and wins.​
+
+The climax of the film centers on APXGP needing a win in the final race to save the team, where Sonny and Joshua’s teamwork ultimately secures victory and the future of APXGP.
+APXGP team overview
+APXGP is owned by former driver Rubén Cervantes, whose investors will sell the team if it does not win at least one Grand Prix in the season.​
+
+The team hires veteran driver Sonny Hayes to partner young rookie Joshua Pearce, hoping Hayes’s experience can turn the car and the team into race winners.​
+</p>
+<p>Key staff include technical director Kate McKenna and a hardworking but error-prone crew, reflecting a low-budget team trying to compete with giants like Mercedes and Ferrari.​
+
+Role in the movie
+APXGP starts as one of the slowest teams on the grid, with reliability problems, slow pit stops, and an uncompetitive car.​
+
+Through Sonny’s feedback and Kate’s upgrades, the team improves the car’s aerodynamics and race strategies, gradually moving from the back to fighting for podiums and wins.​
+
+The climax of the film centers on APXGP needing a win in the final race to save the team, where Sonny and Joshua’s teamwork ultimately secures victory and the future of APXGP.
+</p>
+             
+
+
+
+            <section>
+        <section id="about">
+            <p class="home">ABOUT :</p>
+            <p>APXGP is a fictional Formula 1 team created for the 2025 movie "F1" starring Brad Pitt and Damson Idris. The team, its drivers, and its car were developed as a realistic-looking "11th team" on the grid for the film, and its social media presence and marketing were designed to mimic a real racing team. The APXGP team and drivers are now playable in the EA SPORTS F1 25 video game. </p>
+            <p>APXGP is a small, independent Formula 1 team featured in the movie “F1”, known for its underdog spirit and determination to compete against the sport’s biggest manufacturers. Owned by former driver Rubén Cervantes, the team faces intense pressure to win at least one Grand Prix to avoid being sold, leading them to recruit veteran driver Sonny Hayes to mentor talented rookie Joshua Pearce. With technical director Kate McKenna leading car development and a passionate but resource-limited crew in the garage, APXGP fights through reliability issues, slow pit stops, and financial strain to transform from backmarkers into race contenders.</p>
+            <p>Aging former Formula One (F1) prodigy Sonny Hayes has spent the last 30 years living as a racer-for-hire, following a career-ending crash at the 1993 Spanish Grand Prix that has left him burdened by the failure to live up to his potential.[b] After winning the 24 Hours of Daytona,[c] he is approached by his former teammate Rubén Cervantes, owner of the struggling APXGP F1 team, who asks him to be their second driver. Rubén explains that unless APXGP wins one of the nine remaining Grands Prix of the season, his investors will sell the team. Sonny reluctantly agrees after Rubén insists that victory will prove he is the "best in the world".
+
+At the Silverstone track, Sonny meets the team, including technical director Kate McKenna and ambitious rookie Joshua Pearce. Joshua fears the failing APXGP could derail his career and aims to attract interest from another team. Sonny struggles with the modern F1 machinery but quickly diagnoses APXGP's weaknesses, proposing that the vehicles be upgraded with enhanced aerodynamics to compensate for their speed disadvantage.</p>
+<p>On his return at the British Grand Prix, Sonny and Joshua race against each other rather than cooperating, resulting in both crashing out. Acknowledging the team's need to secure a points finish, Sonny exploits the rules at the Hungarian Grand Prix by deliberately colliding with rivals to trigger safety car periods. This allows Joshua to close the gap to the frontrunners and secure APXGP's first top-ten finish.[d] During the rain-affected Italian Grand Prix, Sonny advises Joshua to remain on slick tires, trading grip for speed and elevating him to second place. Ignoring Sonny's instruction to wait for a straight before overtaking Max Verstappen, Joshua skids off the track, and his car bursts into flames.[e] Although rescued by Sonny, Joshua misses the next three races through injury, while his mother and the press criticize Sonny's high-risk approach. Sonny performs well during Joshua's absence, thanks in large part to Kate's new upgrades improving the car's performance.
+
+An increasingly arrogant Joshua returns at the Belgian Grand Prix and deliberately forces Sonny into a crash. Afterward, Sonny angrily criticizes him for foolishly setting the team back. Seeking to ease tensions, Kate organizes a poker game to highlight their similar backgrounds, after which Sonny and Kate spend the night together. He later admits to her that he races to recapture the rare moments when he feels untouchable.
+
+</p>
+        </section>
+        <section id="contact"></section>
+    </main>
 </body>
-
 </html>
